--- a/IT/html_worksheet_1_and_2.html
+++ b/IT/html_worksheet_1_and_2.html
@@ -27,7 +27,7 @@
     <p>This is text of paragraph 3</p>
 </body>
 
-<b><header style="font-size: 25pt; color: Blue;">Bold, Italics, underline, teletype,<br> superscript, subscript, <br>strong, emphasized and mark</b></header>
+<b><header style="font-size: 25pt; color: Blue;">Bold, Italics, underline, <br> superscript, subscript, <br>strong, emphasized and mark</b></header>
 
 <body><br>
     <b>This text is in bold</b><br>
